<resources>
    <string name="app_name">INTENTCHALLENGE1</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_location">please enter location</string>
    <string name="please_enter_your_number">please enter your number</string>
    <string name="create_new_contact">Create new Contact</string>
    <string name="contacts_app">Contacts app</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
</resources>
